Copilot Review comments and java release- 25